@@ -12,6 +12,11 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  cp could read from freed memory and could even make corrupt copies.
+  This could happen with a very fragmented and sparse input file,
+  on GNU/Linux file systems supporting fiemap extent scanning.
+  [bug introduced in coreutils-8.11]
+
   cp --no-preserve=mode now no longer preserves the original file's
   permissions but correctly sets mode specified by 0666 & ~umask
 
